[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tansu"
version = "1.0.0"
dependencies = [
    "sqlalchemy[postgresql-psycopgbinary,postgresql-asyncpg]",
    "pydantic",
    "pydantic-settings",
    "stellar-sdk",
    "alembic[tz]",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "locust",
]

dev = [
    "tansu[test]",
    "pre-commit",
    "hatch",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tansu"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403", "F405"]
"**/tests/**" = ["E402"]
