[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tansu"
version = "1.1.0"
description = "Tansu - Soroban Versioning"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Software Development :: Version Control :: git",
]

keywords = [
    "stellar",
    "stellar.org",
    "blockchain",
    "git",
    "cryptocurrency",
    "soroban",
    "soroban-rpc"
]

dependencies = [
    "sqlalchemy[postgresql-psycopgbinary,postgresql-asyncpg]",
    "pydantic",
    "pydantic-settings",
    "stellar-sdk",
    "alembic[tz]",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "locust",
]

dev = [
    "tansu[test]",
    "pre-commit",
    "hatch",
    "ruff",
]

[project.urls]
homepage = "https://github.com/tupui/soroban-versioning"
documentation = "https://github.com/tupui/soroban-versioning"
source = "https://github.com/tupui/soroban-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/tansu"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403", "F405"]
"**/tests/**" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
