[package]
name = "tansu"
version = "1.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
ed25519-dalek = "2.2.0"
hex = "0.4.3"
rand = "0.8"
soroban-sdk = { workspace = true, features = ["testutils"] }
